working cave button

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,18 +13,15 @@
     <div class="location">
         <h3>Farm</h3>
         <p>(earns 10-20 golds)</p>
-        <form action="/process_money" method="post">
+        <form action="/process" method="post">
             <input type="hidden" name="farm" value="farm" />
             <button type="submit">Find Gold!</button>
-        </form>
-
-            <button type="submit" form="location">Find Gold!</button>
         </form>
     </div>
     <div class="location">
         <h3>Cave</h3>
         <p>(earns 5-10 golds)</p>
-        <form action="/process_money" method="post">
+        <form action="/process" method="post">
             <input type="hidden" name="cave" value="Cave" />
             <button type="submit">Find Gold!</button>
         </form>
@@ -32,7 +29,7 @@
     <div class="location">
         <h3>House</h3>
         <p>(earns 2-5 golds)</p>
-        <form action="/process_money" method="post">
+        <form action="/process" method="post">
             <input type="hidden" name="house" value="House" />
             <button type="submit">Find Gold!</button>
         </form>
@@ -40,7 +37,7 @@
     <div class="location">
         <h3>Casino</h3>
         <p>(earns/takes 0-50 golds)</p>
-        <form action="/process_money" method="post">
+        <form action="/process" method="post">
             <input type="hidden" name="Casino" value="Casino" />
             <button type="submit">Find Gold!</button>
         </form>
