--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ body{
 .activities{
     height: 20%;
     width: 20%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 10px;
     overflow: auto;
 }
